--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
             "error",
             "single",
             { "avoidEscape": true, "allowTemplateLiterals": false }
-        ]
+        ],
+        "react/prop-types": 0
     },
     "parser": "babel-eslint",
     "env": {
