--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@mrblenny/react-flow-chart": "^0.0.9",
         "electron-is-dev": "^1.1.0",
+        "evergreen-ui": "^4.23.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.4.0"
