--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "@mrblenny/react-flow-chart": "^0.0.9",
         "electron-is-dev": "^1.1.0",
         "evergreen-ui": "^4.23.0",
+        "formik": "^2.1.4",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "3.4.0"
+        "react-scripts": "3.4.0",
+        "yup": "^0.28.1"
     },
     "scripts": {
         "start": "react-scripts start",
