--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "electron-is-dev": "^1.1.0",
         "evergreen-ui": "^4.23.0",
         "formik": "^2.1.4",
+        "lodash": "^4.17.15",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.4.0",
