--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.4.0",
+        "uuid": "^3.3.2",
         "yup": "^0.28.1"
     },
     "scripts": {
