--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "electron-is-dev": "^1.1.0",
         "evergreen-ui": "^4.23.0",
         "formik": "^2.1.4",
+        "i18next": "^19.3.2",
         "lodash": "^4.17.15",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-i18next": "^11.3.3",
         "react-scripts": "3.4.0",
         "uuid": "^3.3.2",
         "yup": "^0.28.1"
