update linux build config

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "linux": {
             "target": [
                 "deb",
-                "rpm",
-                "snap"
+                "rpm"
             ],
             "category": "Utility"
         }
