--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ matrix:
     - rm -rf $HOME/.cache/electron-builder/wine
   
   branches:
-    except:
-      - "/^v\\d+\\.\\d+\\.\\d+$/"
+    only:
+        - dev
