--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "electron-pack:linux": "electron-builder build --linux",
         "electron-pack:win": "electron-builder build -w",
         "electron-pack:mac": "electron-builder build -m",
-        "release": "yarn build && electron-builder"
+        "release": "yarn build && electron-builder",
+        "test": "echo success"
     },
     "browserslist": {
         "production": [
