--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-    - '11.6.0'
+    - '12.0.0'
 
 # Always run two parallel builds: one on mac and one on linux
 # the linux build will use wine to be able to build windows and
@@ -59,7 +59,7 @@ deploy:
     script: bash deploy.travis.sh
     skip_cleanup: true
     on:
-        branch: prod
+        branch: dev
 
 before_cache:
     - rm -rf $HOME/.cache/electron-builder/wine
